# JianziNote

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt  vcpkg.json
.github/workflows/: build.yml  cmakebuild.yml
Jianzi2LaTeX/: CMakeLists.txt  README.md  TikzRenderer.cpp  TikzRenderer.hpp  main.cpp
Jianzi2LaTeX/example/: example.tex  example_classic.tex  jianzinote.sty
Jianzi2Lilypond/: CMakeLists.txt  LilypondRenderer.cpp  LilypondRenderer.hpp  README.md  main.cpp
Jianzi2Lilypond/example/: example.ly  example_jianpu.txt
JianziNote/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  FTFontReader.cpp  FTFontReader.hpp  Jianzi.cpp  Jianzi.hpp  JianziDefines.hpp  JianziStyler.hpp  Point.hpp  SkeletonStyler.cpp  SkeletonStyler.hpp  StylerFromDb.cpp  StylerFromDb.hpp
